# Dica-Scraper

./: README.md  clean_registration_numbers.py  console.py  dica_scraper.py  helper_functions.py  main.py  pyproject.toml  registration_number_scraper.py
data/: dica_registration_numbers.csv  failed_registration_numbers.csv  succeeded_registration_numbers.csv
